<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.nnn.ngocnam.event.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Chọn bài"
        android:textSize="@dimen/TextView.Text.mediumSize"
        android:textAllCaps="true"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example1Name"
        android:id="@+id/btn_b1"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example2Name"
        android:id="@+id/btn_b2"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example3Name"
        android:id="@+id/btn_b3"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        />

</android.support.v7.widget.LinearLayoutCompat>
