<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Example1Activity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/headerName"
        android:textSize="@dimen/TextView.Text.LargeSize"
        android:background="@color/textViewColor"
        android:gravity="center"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numberALabel"
            android:layout_weight="1"
            android:textSize="@dimen/TextView.Text.mediumSize"

            />
        <EditText
            android:id="@+id/edt_numbera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5"
        android:layout_marginTop="16dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numberBLabel"
            android:textSize="@dimen/TextView.Text.mediumSize"
            android:layout_weight="1"
            />
        <EditText
            android:id="@+id/edt_numberb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/TextView.Text.LargeSize"
        android:background="@color/textViewColor"
        android:gravity="center"
        />
        <Button
            android:id="@+id/btn_result"
            android:text="@string/resultText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onResultButtonClick"
            />

</LinearLayout>
